[package]
name = "rtftp"
version = "1.1.1"
authors = ["Reiner Herrmann <reiner@reiner-h.de>"]
edition = "2018"
license = "GPL-3.0-or-later"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
nix = "0.22.0"
getopts = "0.2"
threadpool = "1.0"

[[bin]]
name = "rtftpd"
path = "src/tftpd.rs"

[[bin]]
name = "rtftpc"
path = "src/tftpc.rs"
