[package]
name = "rtftp"
version = "1.1.2"
authors = ["Reiner Herrmann <reiner@reiner-h.de>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "client and server implementation of the Trivial File Transfer Protocol"
repository = "https://github.com/reinerh/rtftp/"
keywords = ["tftp", "file-transfer"]
categories = ["command-line-utilities", "network-programming"]
exclude = [".github/*"]

[profile.release]
lto = true
panic = 'abort'

[dependencies]
nix = "0.22.0"
getopts = "0.2"
threadpool = "1.0"

[[bin]]
name = "rtftpd"
path = "src/tftpd.rs"

[[bin]]
name = "rtftpc"
path = "src/tftpc.rs"
